@@ -5,6 +5,7 @@
     [bugs #1089328, #1001702 and #989157]
   * fixed parsing post plugin parameters of type double for some locales
   * autoload subtitles with .txt extension too
+  * be more POSIX-compliant (head, tail) (build fix) [bug #1172729]
   
 xine-ui (0.99.3) unstable; urgency=low
   * enlarge stream info window (required for Russian translation),
